Cleaned code in category