@@ -1,6 +1,5 @@
 package com.pekilla.service;
 
-
 import com.pekilla.dto.CustomCategoryViewDTO;
 import com.pekilla.exception.type.CategoryNotFoundException;
 import com.pekilla.model.CustomCategory;
@@ -8,52 +7,36 @@ import com.pekilla.repository.CustomCategoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
-
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 @Service
 @Validated
 @RequiredArgsConstructor
 public class CustomCategoryService {
-
     private final CustomCategoryRepository categoryRepository;
     private final UserService userService;
 
     public List<CustomCategoryViewDTO> getAll() {
-        return categoryRepository
-                .findAll().stream().map(
-                    customCategory -> CustomCategoryViewDTO
-                        .builder()
-                            .name(customCategory.getName())
-                            .description(customCategory.getDescription())
-                            .creatorId(customCategory.getCreator().getId())
-                        .build())
-                .collect(Collectors.toList());
+        return categoryRepository.findAll().stream()
+            .map(CustomCategoryViewDTO::fromCategory)
+            .toList();
     }
 
     public CustomCategoryViewDTO getByName(String name) {
-        CustomCategory category = categoryRepository.findByName(name)
-                .orElseThrow(CategoryNotFoundException::new);
-
-        return CustomCategoryViewDTO
-                .builder()
-                    .name(category.getName())
-                    .description(category.getDescription())
-                    .creatorId(category.getCreator().getId())
-                .build();
+        return CustomCategoryViewDTO.fromCategory(
+            categoryRepository.findByName(name).orElseThrow(CategoryNotFoundException::new)
+        );
     }
 
     public String createCategory(CustomCategoryViewDTO dto) {
         categoryRepository.save(CustomCategory
-                .builder()
-                    .creator(userService.getUserById(dto.creatorId()))
-                    .name(dto.name())
-                    .description(dto.description())
-                    .banner(dto.banner())
-                    .icon(dto.icon())
-                .build());
+            .builder()
+            .creator(userService.getUserById(dto.creatorId()))
+            .name(dto.name())
+            .description(dto.description())
+            .banner(dto.banner())
+            .icon(dto.icon())
+            .build());
         return "Category has been added with success";
     }
 }
